--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <a href="/1lesson/homework1.html" title="первое задание"> Lesson 1</a><br>
         <a href="secondlesson/lesson2-0.html" title="второе задание часть 1">lesson2_0 </a><br>
         <a href="secondlesson/lesson2_1.html" title="второе задание часть 2">Lesson 2.1</a>
+        <a href="#"></a>
     </body>
 </html>
