--- a/claas work/3lesson/list.html
+++ b/claas work/3lesson/list.html
@@ -5,7 +5,7 @@
         <title>list</title>
     </head>
     <body>
-        <ul style="list-style-image: url(../img/indent.jpg)">
+        <ul style="list-style-image: url(../../img/Indent.jpg)">
             <li>
                 first
             </li>
