--- a/homework/2lesson/Img Map.html
+++ b/homework/2lesson/Img Map.html
@@ -5,7 +5,7 @@
         <title>Img Map</title>
     </head>
     <body>
-        <img src="../img/map.jpg" alt="error" title="map" usemap="#map" >
+        <img src="../../img/map.jpg" alt="error" title="map" usemap="#map" >
         <map name="map" id="map">
             <area shape="rect" coords="0,0,208,475," alt="birch" title="Birch" href="https://uk.wikipedia.org/wiki/%D0%91%D0%B5%D1%80%D0%B5%D0%B7%D0%B0">
             <area shape="poly" coords="225,263,360,319,318,489,210,481" title="three" alt="three" href="https://uk.wikipedia.org/wiki/%D0%94%D0%B5%D1%80%D0%B5%D0%B2%D0%BE">
@@ -16,7 +16,7 @@
             <area shape="poly" coords="1874,409,1891,408,1899,446,1998,481,1998,547,1851,548,1805,461" title="road" alt="road" href="https://ru.wikipedia.org/wiki/US_66">
         </map>
 
-        <img src="../img/map.jpg" alt="error" title="map" usemap="#mapsmall" width="1000">
+        <img src="../../img/map.jpg" alt="error" title="map" usemap="#mapsmall" width="1000">
         <map name="mapsmall" id="mapsmall">
             <area shape="rect" coords="0,0,104,228," alt="birch" title="Birch" href="https://uk.wikipedia.org/wiki/%D0%91%D0%B5%D1%80%D0%B5%D0%B7%D0%B0">
             <area shape="poly" coords="112,131,180,160,161,245,105,240" title="three" alt="three" href="https://uk.wikipedia.org/wiki/%D0%94%D0%B5%D1%80%D0%B5%D0%B2%D0%BE">
