--- a/index.html
+++ b/index.html
@@ -5,9 +5,41 @@
         <title>Lessons</title>
     </head>
     <body>
-        <a href="/1lesson/homework1.html" title="первое задание"> Lesson 1</a><br>
-        <a href="secondlesson/lesson2-0.html" title="второе задание часть 1">lesson2_0 </a><br>
-        <a href="secondlesson/lesson2_1.html" title="второе задание часть 2">Lesson 2.1</a>
+        <ol type="I">
+            <li>Class Work
+                <ol start="3">
+                 <li>table
+                     <ul>
+                         <li><a href="claas%20work/3lesson/table.html">table</a> </li>
+                        <li><a href="claas%20work/3lesson/list.html"> list</a> </li>
+                     </ul>
+                 </li>
+             </ol>
+            </li>
+            <li>Home Work
+                <ol>
+                    <li>letter
+                         <ul>
+                            <li><a href="homework/1lesson/letter.html">letter</a> </li>
+                        </ul>
+                    </li>
+                    <li>img
+                        <ul>
+                            <li><a href="homework/2lesson/Img_Align.html">Img Align</a> </li>
+                            <li><a href="homework/2lesson/Img%20Map.html">Img Map</a> </li>
+                        </ul>
+                    </li>
+                <li>table
+                    <ul>
+                        <li><a href="homework/3lesson/table.html">table</a></li>
+                    </ul>
+                </li>
+        </ol>
+            </li>
+        </ol>
+        <a href="/homework/1lesson/letter.html" title="первое задание"> Lesson 1</a><br>
+        <a href="homework/2lesson/Img_Align.html" title="второе задание часть 1">lesson2_0 </a><br>
+        <a href="homework/2lesson/Img%20Map.html" title="второе задание часть 2">Lesson 2.1</a>
         <a href="#"></a>
     </body>
 </html>
