--- a/homework/3lesson/table.html
+++ b/homework/3lesson/table.html
@@ -3,54 +3,50 @@
     <head>
         <meta charset="UTF-8">
         <title>table</title>
-        <link href="/css/table.css" rel="stylesheet">
+        <link rel="stylesheet" href="../../css/table.css">
     </head>
     <body>
-        <table class="table">
+        <table>
             <caption>Table on Home_work</caption>
             <tr>
-                <td>1</td>
-                <td>2</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
+                <td colspan="2" rowspan="2">1</td>
+                <td colspan="2" rowspan="2">2</td>
+                <td colspan="2">Table on Home_work</td>
             </tr>
             <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
+                <td colspan="2">Table on Home_work</td>
             </tr>
             <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
+                <td colspan="2">Table on Home_work</td>
+                <td>Table on Home_work</td>
+                <td>Table on Home_work</td>
+                <td colspan="2">Table on Home_work</td>
             </tr>
             <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td&nbsp;></td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
+                <td class="height" colspan="2">Table on Home_work</td>
+                <td colspan="2">Table on Home_work</td>
+                <td colspan="2">Table on Home_work</td>
             </tr>
             <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
+                <td colspan="2">Table on Home_work</td>
+                <td colspan="2" rowspan="2">Table on Home_work</td>
+                <td colspan="2" rowspan="2">Table on Home_work</td>
             </tr>
             <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
+                <td colspan="2">Table on Home_work</td>
+
+
+
             </tr>
         </table>
-        
+        <div>
+            <p>
+                Внешние стили намного удобнее встроенных, так как вы можете подключить один и тот же файл стилей ко множеству страниц.
+
+                Если понадобится внести в стили изменения, то вы меняете один файл, а изменения появляются на всех страницах, где он подключен.
+
+                Со встроенными стилями в этом случае пришлось бы повозиться.
+            </p>
+        </div>
     </body>
 </html>
