--- a/homework/3lesson/table.html
+++ b/homework/3lesson/table.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="../../css/table.css">
     </head>
     <body>
+        <marquee>
         <table>
             <caption>Table on Home_work</caption>
             <tr>
@@ -34,11 +35,9 @@
             </tr>
             <tr>
                 <td colspan="2">Table on Home_work</td>
-
-
-
             </tr>
         </table>
+        </marquee>
         <div>
             <p>
                 Внешние стили намного удобнее встроенных, так как вы можете подключить один и тот же файл стилей ко множеству страниц.
@@ -47,6 +46,8 @@
 
                 Со встроенными стилями в этом случае пришлось бы повозиться.
             </p>
+
+            <marquee>хуйня бежит слева на право</marquee>
         </div>
     </body>
 </html>
