--- a/homework/3lesson/table.html
+++ b/homework/3lesson/table.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>table</title>
-        <link rel="stylesheet" href="../../css/table.css">
+        <link rel="stylesheet" href="../../css/HW/table.css">
     </head>
     <body>
         <table>
