--- a/homework/3lesson/table.html
+++ b/homework/3lesson/table.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>table</title>
-        <link rel="stylesheet" href="../../css/HW/3lesson/table.css">
+        <link rel="stylesheet" href="../../css/table.css">
     </head>
     <body>
+        <marquee>
         <table>
             <caption>Table on Home_work</caption>
             <tr>
@@ -23,7 +24,7 @@
                 <td colspan="2">Table on Home_work</td>
             </tr>
             <tr>
-                <td class="height" colspan="2">Table on Home_work</td>
+                <td class="height" style="hei ght: 300px"    colspan="2">Table on Home_work</td>
                 <td colspan="2">Table on Home_work</td>
                 <td colspan="2">Table on Home_work</td>
             </tr>
@@ -36,6 +37,7 @@
                 <td colspan="2">Table on Home_work</td>
             </tr>
         </table>
+        </marquee>
         <div>
             <p>
                 Внешние стили намного удобнее встроенных, так как вы можете подключить один и тот же файл стилей ко множеству страниц.
@@ -44,6 +46,9 @@
 
                 Со встроенными стилями в этом случае пришлось бы повозиться.
             </p>
+
+            <marquee>хуйня бежит слева на право</marquee>
+
         </div>
     </body>
 </html>
