--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
                 <ol start="3">
                  <li>table
                      <ul>
-                         <li><a href="claas%20work/3lesson/table.html">table</a> </li>
-                        <li><a href="claas%20work/3lesson/list.html"> list</a> </li>
+                         <li><a href="classwork/3lesson/table.html">table</a> </li>
+                        <li><a href="classwork/3lesson/list.html"> list</a> </li>
                      </ul>
                  </li>
+                    <li>
+                        <a href="classwork/4lesson/div.html">div</a>
+                    </li>
              </ol>
             </li>
             <li>Home Work
@@ -29,12 +32,16 @@
                             <li><a href="homework/2lesson/Img%20Map.html">Img Map</a> </li>
                         </ul>
                     </li>
-                <li>table
-                    <ul>
-                        <li><a href="homework/3lesson/table.html">table</a></li>
-                    </ul>
-                </li>
-        </ol>
+                    <li>table
+                        <ul>
+                            <li>
+                                <a href="homework/3lesson/table.html">table</a></li>
+                            </ul>
+                                <a href="homework/4lesson/div.html">div</a>
+                            </li>
+                            <li>
+                    </li>
+                </ol>
             </li>
         </ol>
     </body>
