--- a/homework/4lesson/div.html
+++ b/homework/4lesson/div.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8">
         <title>div</title>
         <link href="../../css/main.css" rel="stylesheet">
+        <link href="">
     </head>
     <body>
-        <main>
+        <main class="green">
             <header>
-                <div></div>
-                <div></div>
+                <div class="little">logo</div>
+                <div>head</div>
                 <div>
                     <div></div>
                     <div></div>
