--- a/homework/4lesson/div.html
+++ b/homework/4lesson/div.html
@@ -4,17 +4,42 @@
         <meta charset="UTF-8">
         <title>div</title>
         <link href="../../css/main.css" rel="stylesheet">
+        <link href="../../css/HW/4lesson/div.css" rel="stylesheet">
     </head>
     <body>
-        <main>
-            <header>
-                <div></div>
-                <div></div>
-                <div>
-                    <div></div>
-                    <div></div>
-                </div>
+        <div class="main">
+            <header class="red header">
+                <header>
+                    <div class="col-left height-head blue header-row-height logo"> dfsfsdfasdfa asdf asdf asdf asd f</div>
+                    <div class="blue header-row-height logo col-middle header-middle" > fadsfdasfasf</div>
+                    <div class="blue col-right logo header-row-height ">
+                        <div class="yellow box-1"></div>
+                        <div class="yellow box-1"></div>
+                    </div>
+                    <div class="clear"></div>
+                </header>
             </header>
-        </main>
+                <section class="first-section red">
+                    <div class="section1-box-1 blue col-left"></div>
+                    <div class="section1-box-2 blue"></div>
+                    <div class="section1-box-3 blue"></div>
+                    <div class="section1-box-4 blue"></div>
+                    <div class="clear"></div>
+                </section>
+            <section class="second-section red">
+                <div class="section2-box-1 blue col-left"></div>
+                <div class="section2-box-2 blue">
+                    <div class="section2-box2-box1 yellow"></div>
+                    <div class="section2-box2-box2 yellow"></div>
+                </div>
+                <div class="clear"></div>
+            </section>
+            <footer class="header red">
+                <div class="blue col-left">
+                    <div class="footer1 yellow"></div>
+                    <div class="footer2 yellow"></div>
+                </div>
+            </footer>
+        </div>
     </body>
 </html>
