add base css files

--- a/homework/4lesson/div.html
+++ b/homework/4lesson/div.html
@@ -14,7 +14,7 @@
                     <div class="blue header-row-height logo col-middle header-middle" > fadsfdasfasf</div>
                     <div class="blue col-right logo header-row-height ">
                         <div class="yellow box-1"></div>
-                        <div class="yellow box-1"></div>
+                        <div class="yellow box-2"></div>
                     </div>
                     <div class="clear"></div>
                 </header>
@@ -35,10 +35,12 @@
                 <div class="clear"></div>
             </section>
             <footer class="header red">
-                <div class="blue col-left">
-                    <div class="footer1 yellow"></div>
-                    <div class="footer2 yellow"></div>
+                <div class="blue col-left fheight fbox1">
+                    <div class="footer1-1 yellow"></div>
+                    <div class="footer1-2 yellow"></div>
                 </div>
+                <div class="fbox2 blue col-middle fheight"></div>
+                <div class="fbox3 blue fheight"></div>
             </footer>
         </div>
     </body>
