add base css files

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
                      </ul>
                  </li>
                     <li>
-                        <a href="classwork/4lesson/div.html">div</a>
+                        div,span
+                        <ul>
+                            <li><a href="<a href="classwork/4lesson/div.html">div</a></li>
+                        </ul>
                     </li>
              </ol>
             </li>
@@ -36,10 +39,13 @@
                         <ul>
                             <li>
                                 <a href="homework/3lesson/table.html">table</a></li>
-                            </ul>
-                                <a href="homework/4lesson/div.html">div</a>
                             </li>
-                            <li>
+                        </ul>
+                    <li>
+                        div
+                    <ul>
+                        <li><a href="homework/4lesson/div.html">div</a></li>
+                    </ul>
                     </li>
                 </ol>
             </li>
