add base css files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li>
                         div,span
                         <ul>
-                            <li><a href="<a href="classwork/4lesson/div.html">div</a></li>
+                            <li><a href=classwork/4lesson/div.html>div</a></li>
                         </ul>
                     </li>
              </ol>
