add base css files

--- a/index.html
+++ b/index.html
@@ -39,13 +39,12 @@
                         <ul>
                             <li>
                                 <a href="homework/3lesson/table.html">table</a></li>
-                            </li>
                         </ul>
-                    <li>
-                        div
-                    <ul>
-                        <li><a href="homework/4lesson/div.html">div</a></li>
-                    </ul>
+                    </li>
+                    <li>div
+                        <ul>
+                            <li><a href="homework/4lesson/div.html">div</a></li>
+                        </ul>
                     </li>
                 </ol>
             </li>
