and homework div last

--- a/homework/4lesson/div.html
+++ b/homework/4lesson/div.html
@@ -7,7 +7,7 @@
         <link href="../../css/HW/4lesson/div.css" rel="stylesheet">
     </head>
     <body>
-        <div class="main">
+        <div class="main">&nbsp;
             <header class="red header">
                 <header>
                     <div class="col-left height-head blue header-row-height logo"> dfsfsdfasdfa asdf asdf asdf asd f</div>
