and homework div last

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
                             <li><a href=classwork/4lesson/div.html>div</a></li>
                         </ul>
                     </li>
+                    <li>CSS
+                        <ul>
+                            <li><a href="classwork/5lesson/css.html">cascading style sheets</a></li>
+                        </ul>
+                    </li>
              </ol>
             </li>
             <li>Home Work
@@ -46,11 +51,13 @@
                             <li><a href="homework/4lesson/div.html">div</a></li>
                         </ul>
                     </li>
+                    <li>CSS
+                        <ul>
+                            <li><a href="homework/5lesson/css.html">CSS</a></li>
+                        </ul>
+                    </li>
                 </ol>
             </li>
         </ol>
-        <div >
-            <div></div>
-        </div>
     </body>
 </html>
