--- a/homework/5lesson/css.html
+++ b/homework/5lesson/css.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>css</title>
-        <link href="css.html" rel="stylesheet">
-        <link href="">
+        <link rel="stylesheet" href="../../css/HW/5lesson/css.css">
     </head>
     <body>
-        
+
+        <p class="par1 blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consectetur culpa, dignissimos dolor dolorem exercitationem harum incidunt ipsum maxime necessitatibus officiis pariatur porro quia reiciendis repellendus suscipit tempora tenetur veritatis!</p><br>
+        <p class="par2 blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquid assumenda blanditiis dolor doloribus illo numquam odit. Atque, deserunt impedit, inventore ipsam, iusto laboriosam perspiciatis quisquam quod sunt suscipit tempo<span>ra</span>.</p><br>
+        <p class="par3 blue">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequatur corporis iusto labore nesciunt odio perferendis praesentium reprehenderit soluta! Amet aperiam asperiores atque, consequatur dicta eum magnam odit optio vit<span>ae</span>.</p><br>
     </body>
 </html>
