--- a/finalprojeсt/landing.html
+++ b/finalprojeсt/landing.html
@@ -6,6 +6,7 @@
         <link href="сss/main.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -14,7 +15,7 @@
                     <div class="logo"><span>M</span>o<span>g</span>o</div>
                     <div>
                         <nav class="navigation">
-                            <ul>
+                            <ul class="ulnav">
                                 <li><a href="#">About</a></li>
                                 <li><a href="">service</a></li>
                                 <li><a href="">word</a></li>
@@ -45,7 +46,47 @@
             </div>
         </header>
         <main>
-            fdsfa
+            <section class="sectionfirst">
+                <div><h4>what we do</h4>
+                    <p>story about as</p>
+                    <img src="img/sectionfirsthr.png" height="3" width="60"/>
+                </div>
+                <div class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                    nisi ut aliquip ex ea commodo consequat. </div>
+                <div class="firstimage">
+                    <div class="sectionfirstimage1 backgroundaqua"></div>
+                    <div class="sectionfirstimage2 backgroundaqua"></div>
+                    <div class="sectionfirstimage3 backgroundaqua"></div>
+                </div>
+            </section>
+            <section class="sectionsecond">
+                <div class="statistick">
+                    <h1>42</h1><br><p>web design project</p>
+                </div>
+                <div class="statistick">
+                    <h1>123</h1><br><p>happy client</p>
+                </div>
+                <div class="statistick">
+                    <h1>15</h1><br><p>award winer</p>
+                </div>
+                <div class="statistick">
+                    <h1>99</h1><br><p>cup of coffee</p>
+                </div>
+                <div class="statistick">
+                    <h1>24</h1><br><p>members</p>
+                </div>
+            </section>
+            <section class="sectionthird">
+                <div class="box1">
+                    <p><h4>we work with</h4>
+                    <h2>amazing services</h2></p>
+                </div>
+                <img src="img/sectionfirstimage1hover.psd"/>
+                <div class="box2"></div>
+                <div class="box3"></div>
+            </section>
         </main>
     </body>
 </html>
