--- a/finalprojeсt/landing.html
+++ b/finalprojeсt/landing.html
@@ -80,8 +80,8 @@
             </section>
             <section class="sectionthird">
                 <div class="box1">
-                    <p><h4>we work with</h4>
-                    <h2>amazing services</h2></p>
+                    <h4>we work with</h4>
+                    <h2>amazing services</h2>
                 </div>
                 <img src="img/sectionfirstimage1hover.psd"/>
                 <div class="box2"></div>
