section second complete

--- a/finalprojeсt/landing.html
+++ b/finalprojeсt/landing.html
@@ -30,7 +30,7 @@
                 <div class="headerH">
                     <h2>creative temhplate</h2>
                     <h1>welcome<br> to mogo</h1>
-                    <img src="img/hr.png" class="hr">
+                    <hr class="firsthr">
                     <div class="learnmore">
                         <a href="#">learn more</a>
                     </div>
@@ -49,12 +49,13 @@
             <section class="sectionfirst">
                 <div><h4>what we do</h4>
                     <p>story about as</p>
-                    <img src="img/sectionfirsthr.png" height="3" width="60"/>
+                    <hr class="secondhr">
                 </div>
                 <div class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                    nisi ut aliquip ex ea commodo consequat. </div>
+                    nisi ut aliquip ex ea commodo consequat.
+                </div>
                 <div class="firstimage">
                     <div class="sectionfirstimage1 backgroundaqua"></div>
                     <div class="sectionfirstimage2 backgroundaqua"></div>
@@ -63,30 +64,95 @@
             </section>
             <section class="sectionsecond">
                 <div class="statistick">
-                    <h1>42</h1><br><p>web design project</p>
+                    <h1>42</h1><br>
+                    <p>web design project</p>
                 </div>
                 <div class="statistick">
-                    <h1>123</h1><br><p>happy client</p>
+                    <h1>123</h1><br>
+                    <p>happy client</p>
                 </div>
                 <div class="statistick">
-                    <h1>15</h1><br><p>award winer</p>
+                    <h1>15</h1><br>
+                    <p>award winer</p>
                 </div>
                 <div class="statistick">
-                    <h1>99</h1><br><p>cup of coffee</p>
+                    <h1>99</h1><br>
+                    <p>cup of coffee</p>
                 </div>
                 <div class="statistick">
-                    <h1>24</h1><br><p>members</p>
+                    <h1>24</h1><br>
+                    <p>members</p>
                 </div>
             </section>
             <section class="sectionthird">
                 <div class="box1">
                     <h4>we work with</h4>
                     <h2>amazing services</h2>
+                    <hr class="secondhr">
                 </div>
-                <img src="img/sectionfirstimage1hover.psd"/>
-                <div class="box2"></div>
-                <div class="box3"></div>
+                <footer class="sectionthirdfooter1">
+                    <div class="sectiontherdfooterbox1">
+                        <figure><img src="img/clock.png" height="31" width="32"/>
+                            <figcaption>
+                                <h5>photography</h5>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            </figcaption>
+                        </figure>
+                        <figure><img src="img/stats.png" height="32" width="32"/>
+                            <figcaption>
+                                <h5>Web Design</h5>
+                                <p>Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            </figcaption>
+                        </figure>
+                        <figure><img src="img/monitor.png" height="28" width="32"/>
+                            <figcaption>
+                                <h5>Creativity</h5>
+                                <p>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </footer>
+                <hr noshade class="smaller">
+                <footer class="sectionthirdfooter1">
+                    <div class="sectiontherdfooterbox1">
+                        <figure><img src="img/book.png" height="32" width="32"/>
+                            <figcaption>
+                                <h5>html/cssy</h5>
+                                <p>Dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            </figcaption>
+                        </figure>
+                        <figure><img src="img/house.png" height="31" width="32"/>
+                            <figcaption>
+                                <h5>html/css</h5>
+                                <p>Lorem dolor sit amet, consectetur adipiscing elit, sed do tempor.</p>
+                            </figcaption>
+                        </figure>
+                        <figure><img src="img/frame.png" height="32" width="32"/>
+                            <figcaption>
+                                <h5>digital</h5>
+                                <p>Sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                            </figcaption>
+                        </figure>
+                    </div>
+                </footer>
+            </section>
+            <section class="sectionfourht">
+                <div class="sectionfourth">
+                    <div class="sectionforhtbox1">
+                        <div>
+                            <h3>for all devices</h3>
+                            <h2>unique design</h2>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="sectionforhtbox2">
+                        <img src="img/table.png"/>
+                        <img src="img/telephone.png"/>
+                    </div>
+                </div>
             </section>
         </main>
     </body>
 </html>
+
+
