--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     </li>
                     <li>CSS
                         <ul>
-                            <li><a href="homework/5lesson/css.html">CSS</a></li>
+                            <li><a href="classwork/5lesson/css.html">CSS</a></li>
                         </ul>
                     </li>
                 </ol>
