--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
                 </ol>
             </li>
         </ol>
-        <a href="finalprojeсt/landing.html"></a>
+        <a href="finalprojeсt/landing.html">final project</a>
     </body>
 </html>
