--- a/finalprojeсt/landing.html
+++ b/finalprojeсt/landing.html
@@ -140,14 +140,16 @@
                 <div class="sectionfourth">
                     <div class="sectionforhtbox1">
                         <div>
-                            <h3>for all devices</h3>
-                            <h2>unique design</h2>
+                            <h3>For all devices</h3></div>
+                        <div>
+                            <h2>unique design</h2><br>
+                            <hr>
                         </div>
-                    </div>
-                    <hr>
-                    <div class="sectionforhtbox2">
-                        <img src="img/table.png"/>
-                        <img src="img/telephone.png"/>
+                        <div class="sectionforhtbox2">
+                            <div class="test">
+                                <div class="sectionforhtbox2img1"><div class="sectionforhtbox2img2"></div></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
