--- a/finalprojeсt/landing.html
+++ b/finalprojeсt/landing.html
@@ -16,7 +16,7 @@
                     <div>
                         <nav class="navigation">
                             <ul class="ulnav">
-                                <li><a href="#">About</a></li>
+                                <li><a href="#about">About</a></li>
                                 <li><a href="">service</a></li>
                                 <li><a href="">word</a></li>
                                 <li><a href="">blog</a></li>
@@ -39,7 +39,7 @@
                     <ul>
                         <li><a href="#"><span>01</span> intro</a></li>
                         <li><a href="#"><span>02</span> work</a></li>
-                        <li><a href="#"><span>03</span> about</a></li>
+                        <li><a href="#about"><span>03</span> about</a></li>
                         <li><a href="#"><span>04</span> contacts</a></li>
                     </ul>
                 </div>
@@ -47,6 +47,7 @@
         </header>
         <main>
             <section class="sectionfirst">
+                <a name="about"></a>
                 <div><h4>what we do</h4>
                     <p>story about as</p>
                     <hr class="secondhr">
@@ -142,8 +143,8 @@
                         <div>
                             <h3>For all devices</h3></div>
                         <div>
-                            <h2>unique design</h2><br>
-                            <hr>
+                            <h2>unique design</h2>
+                            <hr class="thirdhr">
                         </div>
                         <div class="sectionforhtbox2">
                             <div class="test">
@@ -151,6 +152,23 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </section>
+            <section class="sectionfifth">
+                <div class="sectionfifth1">
+                    <h3>service</h3>
+                    <h2>what we do</h2>
+                    <hr class="fourthhr">
+                </div>
+                <div class="sectionfifth2">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+                </div>
+                <div class="sectionfifth3">
+                    <div class="wall"></div>
+                            <div class="sectionfifthbox3">photography</div>
+                            <div class="sectionfifthbox3">creativity</div>
+                            <div class="sectionfifthbox3">web design</div>
                 </div>
             </section>
         </main>
