and homework div last

--- a/finalprojeсt/landing.html
+++ b/finalprojeсt/landing.html
@@ -12,7 +12,8 @@
         <header>
             <div class="headermain">
                 <div class="topheader">
-                    <div class="logo"><span>M</span>o<span>g</span>o</div>
+                    <div class="logo"><span>M</span>o<span>g</span>o
+                    </div>
                     <div>
                         <nav class="navigation">
                             <ul class="ulnav">
@@ -50,7 +51,7 @@
                 <a name="about"></a>
                 <div><h4>what we do</h4>
                     <p>story about as</p>
-                    <hr class="secondhr">
+                    <hr noshade="" class="secondhr">
                 </div>
                 <div class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -144,7 +145,7 @@
                             <h3>For all devices</h3></div>
                         <div>
                             <h2>unique design</h2>
-                            <hr class="thirdhr">
+                            <hr noshade class="thirdhr">
                         </div>
                         <div class="sectionforhtbox2">
                             <div class="test">
