last html landing

--- a/finalprojeсt/landing.html
+++ b/finalprojeсt/landing.html
@@ -165,11 +165,11 @@
                 <div class="section5box5"></div>
                 <div class="section5box6"></div>
             </section>
-            <footer>
-                <hr class="smaller">
+        </main>
+            <footer class="footerfooter">
+                <hr>
                 <div class="footerlast"><a href="https://www.facebook.com/jenya.vasilyev?ref=bookmarks">&copy;VasJen</a></div>
             </footer>
-        </main>
     </body>
 </html>
 
