--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                             <li><a href="classwork/5lesson/css.html">cascading style sheets</a></li>
                         </ul>
                     </li>
+                    <li>meta and border radius
+                        <ul>
+                            <li><a href="classwork/6lesson/meta_position.html">borderradius and meta </a> </li>
+                        </ul>
+                    </li>
              </ol>
             </li>
             <li>Home Work
