--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 </ol>
             </li>
         </ol>
+        <a href="homework/6lesson/site.html">site</a>
         <a href="finalprojeсt/landing.html">final project</a>
     </body>
 </html>
