--- a/homework/6lesson/site.html
+++ b/homework/6lesson/site.html
@@ -14,7 +14,7 @@
                     <nav>
                         <ul>
                             <li><a href="#">home</a></li>
-                            <li><a href="#">services</a></li>
+                            <li><a href="#services">services</a></li>
                             <li><a href="#">portfolio</a></li>
                             <li><a href="#">work</a></li>
                             <li><a href="#">contact</a></li>
@@ -25,13 +25,42 @@
             <div class="caption">
                 <h3>welcome to our studio!</h3>
                 <h1>it's nice to meet you</h1>
-            <form>
-                <button class="btn">tell me more</button>
-            </form>
+                <form>
+                    <button class="btn">tell me more</button>
+                </form>
             </div>
         </header>
         <main>
-
+            <section class="sectionOne">
+                <div class="sectiononebox1">
+                    <a name="services"><h2>Services</h2></a>
+                    <p>Proin iaculis purus consequat sem cure. </p>
+                </div>
+                <div class="sectiononebox2">
+                    <div>
+                        <img src="img/korzina.png" height="73" width="74"/>
+                        <h4>E-Commerce</h4>
+                        <p>Proin iaculis purus consequat sem cure
+                            digni ssim. Donec porttitora entum suscipit
+                            aenean rhoncus posuere odio in tincidunt.
+                        </p>
+                    </div>
+                    <div><img src="img/labtop.png" height="73" width="74"/>
+                        <h4>Responsive Web</h4>
+                        <p>Proin iaculis purus consequat sem cure
+                            digni ssim. Donec porttitora entum suscipit
+                            aenean rhoncus posuere odio in tincidunt.</p>
+                    </div>
+                    <div><img src="img/SECURITY.png" height="73" width="74"/>
+                        <h4>Web Security</h4>
+                        <p>
+                            Proin iaculis purus consequat sem cure
+                            digni ssim. Donec porttitora entum suscipit
+                            aenean rhoncus posuere odio in tincidunt.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
