--- a/homework/6lesson/site.html
+++ b/homework/6lesson/site.html
@@ -15,8 +15,8 @@
                         <ul>
                             <li><a href="#">home</a></li>
                             <li><a href="#services">services</a></li>
-                            <li><a href="#">portfolio</a></li>
-                            <li><a href="#">work</a></li>
+                            <li><a href="#portfolio">portfolio</a></li>
+                            <li><a href="#aboutus">work</a></li>
                             <li><a href="#">contact</a></li>
                         </ul>
                     </nav>
@@ -61,6 +61,61 @@
                     </div>
                 </div>
             </section>
+            <section class="sectionsecond">
+                <div class="sectionsecondbox1">
+                    <a name="portfolio">
+                        <h2>
+                            our portfolio
+                        </h2></a>
+                    <br>
+                    <p>Proin iaculis purus consequat sem cure. </p></div>
+                <div class="sectionsecondbox2">
+
+                    <img src="img/section2image1.jpg" height="301" width="291"/>
+
+                    <img src="img/section2image2.jpg" height="301" width="291"/>
+
+                    <img src="img/section2image3.jpg" height="301" width="291"/>
+                </div>
+            </section>
+            <section class="sectionthird">
+                <div class="sectionthirdbox1">
+                    <a name="aboutus"></a>
+                    <h2>about us</h2>
+                    <br>
+                    <p>
+                        Proin iaculis purus consequat sem cure.
+                    </p>
+                </div>
+                <div class="sectionthirdbox2">
+                    <div class="content1">
+                        <img src="img/sectionthirdimage1.png" height="183" width="183"/>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste possimus sequi similique. Dolor nesciunt rem ullam voluptatem? Enim odio odit praesentium
+                            velit! Atque consequuntur fugit, id illum nesciunt quibusdam vero?
+                        </p>
+                    </div>
+                    <div class="content2">
+                        <img src="img/sectionthirdimage2.png" height="183" width="183"/>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ex harum illum perferendis veritatis! Consectetur dolores doloribus ducimus esse excepturi
+                            fugit neque odit quibusdam quo sed sequi tempore unde, velit!</p></div>
+                    <div class="content1">
+                        <img src="img/sectionthirdimage3.png" height="183" width="183"/>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet atque cum deleniti distinctio dolore ex, excepturi fugiat, hic maxime numquam obcaecati odio perspiciatis
+                            provident ullam veniam? Debitis dolorum illum recusandae!</p>
+                    </div>
+                    <div class="content2">
+                        <img src="img/sectionthidimage5.png" height="183" width="183"/>
+                        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda corporis dicta eaque nostrum quaerat repellat ullam voluptatibus. Illum, velit, voluptas. Autem dicta,
+                            dignissimos eligendi esse nihil officiis reiciendis sed sunt.
+                        </P>
+                    </div>
+                </div>
+            </section>
         </main>
+        <footer>
+            <p>&copy Copyright 2014 FreebiesXpress.com</p>
+        </footer>
     </body>
 </html>
