--- a/homework/6lesson/site.html
+++ b/homework/6lesson/site.html
@@ -68,7 +68,8 @@
                             our portfolio
                         </h2></a>
                     <br>
-                    <p>Proin iaculis purus consequat sem cure. </p></div>
+                    <p>Proin iaculis purus consequat sem cure. </p>
+                </div>
                 <div class="sectionsecondbox2">
 
                     <img src="img/section2image1.jpg" height="301" width="291"/>
@@ -89,27 +90,33 @@
                 </div>
                 <div class="sectionthirdbox2">
                     <div class="content1">
-                        <img src="img/sectionthirdimage1.png" height="183" width="183"/>
+                        <img src="img/sectionthirdimage1.png">
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste possimus sequi similique. Dolor nesciunt rem ullam voluptatem? Enim odio odit praesentium
                             velit! Atque consequuntur fugit, id illum nesciunt quibusdam vero?
                         </p>
                     </div>
                     <div class="content2">
-                        <img src="img/sectionthirdimage2.png" height="183" width="183"/>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ex harum illum perferendis veritatis! Consectetur dolores doloribus ducimus esse excepturi
-                            fugit neque odit quibusdam quo sed sequi tempore unde, velit!</p></div>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad ex harum illum perferendis veritatis! Consectetur dolores doloribus ducimus esse excepturi
+                            fugit neque odit quibusdam quo sed sequi tempore unde, velit!
+                        </p>
+                        <img src="img/sectionthirdimage2.png">
+                    </div>
                     <div class="content1">
-                        <img src="img/sectionthirdimage3.png" height="183" width="183"/>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet atque cum deleniti distinctio dolore ex, excepturi fugiat, hic maxime numquam obcaecati odio perspiciatis
-                            provident ullam veniam? Debitis dolorum illum recusandae!</p>
+                        <img src="img/sectionthirdimage3.png">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet atque cum deleniti distinctio dolore ex, excepturi fugiat, hic maxime numquam obcaecati odio perspiciatis
+                            provident ullam veniam? Debitis dolorum illum recusandae!
+                        </p>
                     </div>
                     <div class="content2">
-                        <img src="img/sectionthidimage5.png" height="183" width="183"/>
-                        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda corporis dicta eaque nostrum quaerat repellat ullam voluptatibus. Illum, velit, voluptas. Autem dicta,
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda corporis dicta eaque nostrum quaerat repellat ullam voluptatibus. Illum, velit, voluptas. Autem dicta,
                             dignissimos eligendi esse nihil officiis reiciendis sed sunt.
-                        </P>
+                        </p>
+                        <img src="img/sectionthidimage5.png">
+
                     </div>
                 </div>
             </section>
