--- a/homework/6lesson/absolute.html
+++ b/homework/6lesson/absolute.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../../css/HW/6lesson/position.css">
     </head>
     <body>
+        <div class="absolute"></div>
        <div class="position">
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque debitis dignissimos eveniet harum inventore iste iusto laboriosam nobis nulla officiis provident quasi quod
                ratione, recusandae repudiandae sint sit veritatis, voluptatem.</p>
