7lesson 1 commit classwork

--- a/classwork/7lesson/avtorisation.html
+++ b/classwork/7lesson/avtorisation.html
@@ -50,6 +50,7 @@
                 <option value="CSS">CSS</option>
                 <option value="JavaScript">JavaScript</option>
                 <option value="jQuery">jQuery</option>
+                <div></div>
             </select>
             <br>
         </form>
